2002-08-01  Simon Waters <simon@wretched.demon.co.uk>

	* Correct additional input file name limits
	  and related field sizes throughout code.
	  (NB UNIVERSIAL code changes untested)

	* Changes proposed by MC for compiling with MSVC
	  Note: ULL() macro should be used for 64 bit integer constants

	* Change help text for "universal" if it wasn't compiled in.

	* Minor optimisation in the misnamed MateScan routine.

	* Shorten declaration of rings, this doesn't need to be in init.c

	* Clean up case statement for X-ray attacks.

	* Correct array bound error in cmd.c hint code.

	* Correct memset in book code.

	* Reorder test on trimming trailing spaces.

2002-05-19  Simon Waters <simon@wretched.demon.co.uk>

	* Corrected command line size to 128 through out cmd.c to
	  fix segmentation fault errors on complex fen positions.

2002-05-02  Simon Waters <simon@wretched.demon.co.uk>

	* Reorder move generation of promotions

	* Improve sorting of captures in SortMove

	* Insert pinned and hanging piece checks

	* Remove unreachable code in cmd.c

	* Update some eval weightings

2002-03-14  Simon Waters <simon@wretched.demon.co.uk>

	* Fix memory leak HashTab

2002-03-06  Simon Waters <simon@wretched.demon.co.uk>

	* Make "book on" use BOOKPREFER not BOOKBEST

	* Fix implementation of BOOKBEST

	* Implement "book {worst|best|prefer}"

	* Correct README as it said not Official distro

2002-03-05  Simon Waters <simon@wretched.demon.co.uk>

	* Remove redundant tests from configure.ac

	* Update version to 5.04 in configure.ac

	* Move local m4 macros to acinclude.m4

2002-03-03  Lukas Geyer  <geyer@math.uni-dortmund.de>

	* common.h: Refine check for buggy gcc 2.95 on PPC.

	* common.h: Changed lzArray and BitCount from short to unsigned
	  char, corresponding prototypes for leadz() and nbits(), too.

	* inlines.h and util.c: Changed leadz() and nbits() to not use
	  union, rather do explicit bit arithmetic which does not assume
	  anything on endianness.
